made search loading gif visible. fixed feature menu position.

--- a/app/css/budget.css
+++ b/app/css/budget.css
@@ -158,6 +158,14 @@
 	cursor:pointer;
 }
 
+#featured_menu_icon
+{
+	position:absolute;
+	top:12px;
+	right:-25px;
+	cursor:pointer
+}
+
 #featured_menu
 {
 	display:none;
